# xivlauncher-auto-otp

./: README.md
src/: Cargo.toml  xivlauncher-auto-otp.rs
src/.cargo/: config.toml
