[package]
name = "xivlauncher-auto-otp"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.23", features = ["blocking"] }
totp-rs = "5.4.0"

[[bin]]
name = "xivlauncher-auto-otp"
path = "xivlauncher-auto-otp.rs"